fix steps styling on mobile

--- a/public/stylesheets/_includes/_seriesteps.less
+++ b/public/stylesheets/_includes/_seriesteps.less
@@ -188,7 +188,7 @@
 
 #serie-steps label img {
     width: 100%;
-    height: 7em;
+    height: 8em;
 }
 
 #serie-steps label a {
@@ -201,6 +201,7 @@
     display: block;
     position: relative;
     text-align: left;
+    margin-top: -2em;
 }
 
 #serie-steps label a:hover,
@@ -301,6 +302,9 @@
         width: 100%;
         height: 10em;
     }
+  #serie-steps label a {
+    margin-top: 0;
+  }
 	#serie-steps label a h2 {
 		max-width: 80%;
 	}
